--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -5,16 +5,21 @@
   "proxy": "http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "activestorage": "^5.2.6",
+    "add": "^2.0.6",
+    "bootstrap": "^5.1.3",
+    "cra-template": "1.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html5-camera-photo": "^1.5.5",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "PORT=4000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
