--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -11,6 +11,7 @@
     "add": "^2.0.6",
     "bootstrap": "^5.1.3",
     "cra-template": "1.1.3",
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-html5-camera-photo": "^1.5.5",
