--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -13,6 +13,7 @@
     "cra-template": "1.1.3",
     "history": "^5.1.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-html5-camera-photo": "^1.5.5",
     "react-redux": "^7.2.6",
