--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -14,6 +14,7 @@
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-dnd": "^14.0.4",
     "react-dom": "^17.0.2",
     "react-html5-camera-photo": "^1.5.5",
     "react-redux": "^7.2.6",
