added google calander

--- a/frontend/frontend/.env
+++ b/frontend/frontend/.env
@@ -1,3 +1,7 @@
 PORT=3001
 
 sudo service postgresql start
+
+API_KEY = AIzaSyClB_RdoAh68CCN-VqNcX2nLeLSed2l1jc
+
+CLIENT_ID = 227745994117-ib0imbkhlnl5vnulgn4aghqhjkih9nut.apps.googleusercontent.com
